WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
313186
[Build Speed] Fix compilation issues in JSC headers
https://bugs.webkit.org/show_bug.cgi?id=313186
Summary
[Build Speed] Fix compilation issues in JSC headers
Jer Noble
Reported
2026-04-23 16:54:40 PDT
[Build Speed] Fix compilation issues in JSC headers
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-04-23 16:54:47 PDT
<
rdar://problem/175466781
>
Jer Noble
Comment 2
2026-04-23 17:26:34 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63487
EWS
Comment 3
2026-04-27 11:24:31 PDT
Committed
312116@main
(d4029d5d9a79): <
https://commits.webkit.org/312116@main
> Reviewed commits have been landed. Closing PR #63487 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug