Source/JavaScriptCore/wasm/WasmModuleInformation.h
@@ -42,6 +42,8 @@ class WebAssemblyCompileOptions;
 
 namespace Wasm {
 
+struct ModuleDebugInfo;
+
 struct ModuleInformation final : public ThreadSafeRefCounted<ModuleInformation> {
 
     using BranchHints = UncheckedKeyHashMap<uint32_t, BranchHintMap, IntHash<uint32_t>, WTF::UnsignedWithZeroKeyHashTraits<uint32_t>>;
